# e-tasks

./: .anjuta_sym_db.db  AUTHORS  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h  config.status  configure  configure.ac  configure.ac.bak  libtool  tasks.anjuta
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
po/: Makefile  Makefile.in
resources/: e-tasks.desktop
src/: Makefile  Makefile.am  Makefile.am.bak  Makefile.in  callbacks.c  callbacks.h  db_sqlite.c  db_sqlite.h  dbus-stuff.c  dbus-stuff.h  gui.c  gui.c.orig  gui.h  main.c
src/.deps/: callbacks.Po  db_sqlite.Po  gui.Po  main.Po
